# smol_kevin

./: .gitignore  Cargo.toml  README.md  commands.rs  main.rs
src/: commands.rs  handler.rs  main.rs  setup.rs  setup_utils.rs  structs.rs
src/handler/: execution.rs  receiver.rs  utils.rs  voice.rs
