[package]
name = "smol_kevin"
version = "0.1.0"
authors = ["rm <46228228+RampeoMattone@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#songbird = "0.1.0"
#discortp = "0.2"
#chrono = "0.4.19"
confy = "0.4.0"
serde = "1.0.130"
async-trait = "0.1.51"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "voice", "unstable_discord_api", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]