[package]
name = "smol_kevin"
version = "0.1.0"
authors = ["rm <46228228+RampeoMattone@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
confy = "0.4.0"
serde = "1.0.130"
async-trait = "0.1.51"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
songbird = "0.2.0"

[dependencies.serenity]
version = "0.10"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "voice", "unstable_discord_api", "rustls_backend"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]